Show rooms you've been invited to
